added service layer

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,13 +12,16 @@ error.password.length=Password must be between 6 and 12 characters long.
 error.password.mismatch=Password doesn't match.
 error.password.incorrect=Password is incorrect.
 
-error.image.required=Profile Image field cannot be empty.
+
+error.image.data.required=Image data is required
+error.image.data.empty=Image data cannot be empty
+error.image.size.invalid=Image size must be positive
+error.image.contentType.required=Image content type is required
 error.image.no_image =No image Selected.
 error.image.size=Image exceeds 5MB size limit.
 error.image.type=Only JPEG images are allowed.
 error.image.found=Image not found.
 error.image.size.exceed=Image exceeds 5MB size limit.
-error.image.insert=Failed to upload image. Please try again later.
 
 error.validation.all_fields_required=All fields are required.
 error.global.internal=Something went wrong. Please try again.
